--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 <table border="0" cellspacing="0" cellpadding="0">
                     <tr>
                         <td style="padding-left: 35px; padding-right: 12px;">
-                            <a href="#!" target="_blank" title="Instagram">
+                            <a href="http://instagram.com/squarespace" target="_blank" title="Instagram">
                                 <img src="./images/ig.png" alt="instagram" width="15" height="15" style="display: block; width: 15px; height: 15px;" />
                             </a>
                         </td>
                         <td style="padding-right: 13px;">
-                            <a href="#!" target="_blank" title="Tiktok">
+                            <a href="https://www.tiktok.com" target="_blank" title="Tiktok">
                                 <img src="./images/tiktok.png" alt="tiktok" width="13" style="display: block; width: 13px;" />
                             </a>
                         </td>
                         <td>
-                            <a href="#!" target="_blank" title="Facebook">
+                            <a href="http://facebook.com/squarespace" target="_blank" title="Facebook">
                                 <img src="./images/fb.png" alt="facebook" width="8" style="display: block; width: 8px;" />
                             </a>
                         </td>
@@ -46,70 +46,45 @@
                     <tr>
                         <td>
                             <img src="./images/sign.png" alt="sign" width="90" style="display: block; width: 90px;" />
-                            <p style="color: #040203; font-size: 16pt; font-family: 'Roboto', sans-serif; margin-top: 8px; margin-bottom: 12px;">
-                                <strong style="font-weight: 700;">Ryan Snyder</strong><br>
-                                <span style="color: #EF5A24;">Realtor & Owner</span>
+                            <p style="font-size: 11pt; font-family: 'Roboto', sans-serif; margin-top: 8px; margin-bottom: 12px;">
+                                <strong style="color: #17181C; font-size: 16.2pt; font-weight: 700;">Ryan Snyder</strong><br>
+                                <span style="color: #D5D1CE;">Realtor & Owner</span>
                             </p>
-                        </td>
-                        <td></td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-
-    <table border="0" cellspacing="0" cellpadding="0" width="550" style="width: 550px;">
-        <tr>
-            <td style="padding-bottom: 20px;">
-                <p style="color: #040203; font-size: 16pt; font-family: 'Roboto', sans-serif; margin: 0px;">
-                    <strong style="font-weight: 700;">Conner Egan</strong>
-                </p>
-                <p style="color: #6E6E6E; font-size: 11.5pt; font-weight: 400; font-family: 'Roboto', sans-serif; margin: 0px;">
-                    Owner - <span style="color: #EF5A24;">foxhole-tech</span>
-                </p>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <table border="0" cellspacing="0" cellpadding="0">
-                    <tr>
-                        <td width="212" style="border-right: 1.5px solid #6E6E6E;">
-                            <img src="https://developer-zahid.github.io/Foxhole-Tech-Email-Signature/images/logo.png" alt="logo" width="190" style="display: block; width: 190px;" />
-                        </td>
-                        <td style="padding-left: 17px;">
                             <table border="0" cellspacing="0" cellpadding="0">
                                 <tr>
                                     <td width="18" style="padding-bottom: 5px;">
-                                        <img src="https://developer-zahid.github.io/Foxhole-Tech-Email-Signature/images/ph.png" alt="phone" width="11" style="display: block; width: 11px;">
+                                        <img src="./images/ph.png" alt="phone" width="11" style="display: block; width: 11px;">
                                     </td>
-                                    <td style="color: #6E6E6E; font-size: 10.5pt; font-weight: 400; font-family: 'Roboto', sans-serif; line-height: 1; padding-bottom: 5px;">
-                                        <a href="tel:7753015007" target="_blank" title="Phone" style="color: #6E6E6E; text-decoration: none !important;">
-                                            <span style="color: #6E6E6E; text-decoration: none !important; white-space: nowrap;">775-301-5007</span>
+                                    <td style="color: #383838; font-size: 10pt; font-weight: 400; font-family: 'Roboto', sans-serif; line-height: 1; padding-bottom: 5px;">
+                                        <a href="tel:7273077618" target="_blank" title="Phone" style="color: #383838; text-decoration: none !important;">
+                                            <span style="color: #383838; text-decoration: none !important; white-space: nowrap;">727-307-7618</span>
                                         </a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td style="padding-bottom: 5px;">
-                                        <img src="https://developer-zahid.github.io/Foxhole-Tech-Email-Signature/images/mail.png" alt="mail" width="12" style="display: block; width: 12px;">
+                                        <img src="./images/mail.png" alt="mail" width="11" style="display: block; width: 11px;">
                                     </td>
-                                    <td style="color: #6E6E6E; font-size: 10.5pt; font-weight: 400; font-family: 'Roboto', sans-serif; line-height: 1; padding-bottom: 5px;">
-                                        <a href="mailto:conner@foxhole-tech.com" target="_blank" title="Email" style="color: #6E6E6E; text-decoration: none !important;">
-                                            <span style="color: #6E6E6E; text-decoration: none !important; white-space: nowrap;">conner@foxhole-tech.com</span>
+                                    <td style="color: #383838; font-size: 10pt; font-weight: 400; font-family: 'Roboto', sans-serif; line-height: 1; padding-bottom: 5px;">
+                                        <a href="mailto:ryan@estatevida.com" target="_blank" title="Email" style="color: #383838; text-decoration: none !important;">
+                                            <span style="color: #383838; text-decoration: none !important; white-space: nowrap;">ryan@estatevida.com</span>
                                         </a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td style="padding-bottom: 12px;">
-                                        <img src="https://developer-zahid.github.io/Foxhole-Tech-Email-Signature/images/web.png" alt="web" width="12" style="display: block; width: 12px;">
+                                    <td>
+                                        <img src="./images/web.png" alt="web" width="11" style="display: block; width: 11px;">
                                     </td>
-                                    <td style="color: #6E6E6E; font-size: 10.5pt; font-weight: 400; font-family: 'Roboto', sans-serif; line-height: 1; padding-bottom: 12px;">
-                                        <a href="https://www.foxhole-tech.com/" target="_blank" title="Website" style="color: #6E6E6E; text-decoration: none !important;">
-                                            <span style="color: #6E6E6E; text-decoration: none !important; white-space: nowrap;">www.foxhole-tech.com</span>
+                                    <td style="color: #383838; font-size: 10pt; font-weight: 400; font-family: 'Roboto', sans-serif; line-height: 1;">
+                                        <a href="https://www.estatevida.com/" target="_blank" title="Website" style="color: #383838; text-decoration: none !important;">
+                                            <span style="color: #383838; text-decoration: none !important; white-space: nowrap;">www.estatevida.com</span>
                                         </a>
                                     </td>
                                 </tr>
                             </table>
-                            
+                        </td>
+                        <td style="padding-left: 20px;">
+                            <img src="./images/logo.gif" alt="logo" width="214" style="display: block; width: 214px;" />
                         </td>
                     </tr>
                 </table>
